habits/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: beaverhabits
  namespace: habits
spec:
  selector:
    matchLabels:
      app: beaverhabits
  template:
    metadata:
      labels:
        app: beaverhabits
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
      containers:
      - name: beaverhabits
        image: daya0576/beaverhabits:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        volumeMounts:
        - name: data
          mountPath: /app/.user
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: beaverhabits
