habits/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: beaverhabits
  namespace: habits
spec:
  selector:
    app: beaverhabits
  ports:
  - port: 80
    targetPort: http
    name: http
