habits/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: beaverhabits
  namespace: habits
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    # traefik.ingress.kubernetes.io/router.middlewares: authentik-bazarr@kubernetescrd
spec:
  rules:
  - host: habits.michaelthomson.dev
    http:
      paths:
      - pathType: ImplementationSpecific
        path: /
        backend:
          service:
            name: beaverhabits
            port:
              name: http
  tls:
    - hosts:
        - habits.michaelthomson.dev
      secretName: letsencrypt-wildcard-cert-michaelthomson.dev
